handle end & stop
